Capitalize Blockchain and Ethereum

--- a/Talk7/01_introduction/01_introduction.tex
+++ b/Talk7/01_introduction/01_introduction.tex
@@ -2,14 +2,14 @@
 
 Since the initial development of computing and communication systems, their security has been an ever-growing concern. More and more data is being collected and shared between entities and third-parties. Protecting this data and the underlying systems is of utmost importance for our internet-based economy, as companies are bound by increasingly strict laws and need their customers to be confident in data privacy.
 
-The evolution of blockchain systems over the past decade has led to research on a broad range of application areas in computer science as well as other contexts. Amongst many others, the applications of blockchain technologies for the purposes of securing systems and data has been an area of very recent research. The primary goal of this work is, therefore, to provide an overview of key areas where such technologies could be applied in future systems.
+The evolution of Blockchain systems over the past decade has led to research on a broad range of application areas in computer science as well as other contexts. Amongst many others, the applications of Blockchain technologies for the purposes of securing systems and data has been an area of very recent research. The primary goal of this work is, therefore, to provide an overview of key areas where such technologies could be applied in future systems.
 
-To establish a solid foundation, Section~\ref{sec:02_background} provides a summary of the most important basic concepts and technical background. More specifically, Section~\ref{subsec:02_cybersecurity} goes into the traditional concepts of cybersecurity and the threat models that have been developed in the area (e.g., the CIA triangle~\cite{whitman2011principles}). Section \ref{subsec:02_Blockchain} then presents the basics of blockchain on the example of Bitcoin, while Section \ref{subsec:02_smart_contracts} summarizes the concept of smart contracts, an evolution based on the core infrastructure of the blockchain.
+To establish a solid foundation, Section~\ref{sec:02_background} provides a summary of the most important basic concepts and technical background. More specifically, Section~\ref{subsec:02_cybersecurity} goes into the traditional concepts of cybersecurity and the threat models that have been developed in the area (e.g., the CIA triangle~\cite{whitman2011principles}). Section \ref{subsec:02_Blockchain} then presents the basics of Blockchain on the example of Bitcoin, while Section \ref{subsec:02_smart_contracts} summarizes the concept of smart contracts, an evolution based on the core infrastructure of the Blockchain.
 
-On a lower, more technical level, this work focuses on the applications of blockchain for the prevention of Distributed Denial of Service attacks (DDoS attacks), as well as the improvement of key parts of the internet infrastructure. DDoS attacks are a possibility for attackers to flood the service of a company. Such attacks can lead to availability issues (e.g., causing service downtimes) and thus result in significant business forfeits. Approaches to protecting networks against such DDoS attacks using blockchain technologies are summarized in Section~\ref{subsec:03_ddos}.
+On a lower, more technical level, this work focuses on the applications of Blockchain for the prevention of Distributed Denial of Service attacks (DDoS attacks), as well as the improvement of key parts of the internet infrastructure. DDoS attacks are a possibility for attackers to flood the service of a company. Such attacks can lead to availability issues (e.g., causing service downtimes) and thus result in significant business forfeits. Approaches to protecting networks against such DDoS attacks using Blockchain technologies are summarized in Section~\ref{subsec:03_ddos}.
 
-A critical part of the internet and communications security in today's environment is the existence of communication methods that participants trust to deliver messages securely and confidently. Public Key Infrastructures (PKI) provide the backbone for many of these methods. Existing PKI architectures often rely on a centralized infrastructure, which enables many kinds of attacks. We provide an overview of possible improvements to PKI using blockchain technologies in section \ref{subsec:03_pki}.
+A critical part of the internet and communications security in today's environment is the existence of communication methods that participants trust to deliver messages securely and confidently. Public Key Infrastructures (PKI) provide the backbone for many of these methods. Existing PKI architectures often rely on a centralized infrastructure, which enables many kinds of attacks. We provide an overview of possible improvements to PKI using Blockchain technologies in section \ref{subsec:03_pki}.
 
-The emergence of the Internet of Things (IoT) and a growing market for interconnected devices brings exciting challenges for blockchain use. Section \ref{subsec:03_IoT} reviews some of the most critical security and privacy challenges, as well as how they can be mitigated with blockchain technology. It provides an overview of how blockchain can help with proving the integrity of IoT data (e.g., smart meters) and goes into how blockchain can strengthen the security of IoT in the current state of research (e.g., in smart homes).
+The emergence of the Internet of Things (IoT) and a growing market for interconnected devices brings exciting challenges for Blockchain use. Section \ref{subsec:03_IoT} reviews some of the most critical security and privacy challenges, as well as how they can be mitigated with Blockchain technology. It provides an overview of how Blockchain can help with proving the integrity of IoT data (e.g., smart meters) and goes into how Blockchain can strengthen the security of IoT in the current state of research (e.g., in smart homes).
 
 The goal of this report is not only to cover theoretical concepts or frameworks but also to shed some light on existing real-world applications or proposed system architectures that are currently being developed (presented in Section~\ref{subsec:03_applications}). These applications show us whether the theoretical concepts apply to the real world as well as what types of problems and issues arise.
