--- a/Talk7/02_background/02-2_blockchain.tex
+++ b/Talk7/02_background/02-2_blockchain.tex
@@ -1,7 +1,7 @@
 \subsection{Blockchain}
 \label{subsec:02_Blockchain}
 
-Connected to the growing popularity of the Bitcoin Cryptocurrency that conquered the markets of the world, the interest for its underlying technology - the Blockchain - grew in a similar fashion. The idea of having a fully decentralized, tamper-proofed distributed online ledger, fascinated not only the digital world but also other non-digital areas. Moreover, while Bitcoin gained a bad reputation due to its price fluctuation \cite{Shackelford2016}, th Blockchain continued to receive attention from the intrustry and academia. However, questions arise, such as  if the blockchain technology is the solution for existing problems or it is the problem itself \cite{Stinchcombe2017, Nielsen2018, Lunn2015}.
+Connected to the growing popularity of the Bitcoin Cryptocurrency that conquered the markets of the world, the interest for its underlying technology - the Blockchain - grew in a similar fashion. The idea of having a fully decentralized, tamper-proofed distributed online ledger, fascinated not only the digital world but also other non-digital areas. Moreover, while Bitcoin gained a bad reputation due to its price fluctuation \cite{Shackelford2016}, th Blockchain continued to receive attention from the intrustry and academia. However, questions arise, such as  if the Blockchain technology is the solution for existing problems or it is the problem itself \cite{Stinchcombe2017, Nielsen2018, Lunn2015}.
 
 In the following subsections, the Blockchain technology shortly explained and discussed. It is not the goal of this section to give full technical insights into the various mechanisms but to provide a base of knowledge for the sections to come.
 
