--- a/Talk7/02_background/02_background.tex
+++ b/Talk7/02_background/02_background.tex
@@ -1,7 +1,7 @@
 \section{Background}
 \label{sec:02_background}
 
-In this section, we build a foundation with regards to the theoretical concepts and background that are needed to follow the concepts presented in section \ref{sec:03_related_work}. First Section \ref{subsec:02_cybersecurity} presents the traditional ideas of cybersecurity as they have been part of research for the past decades. Subsequently, Section \ref{subsec:02_Blockchain} elaborates on the core concepts of the blockchain which are necessary to understand the main research topic of this work. Finally, Section \ref{subsec:02_smart_contracts} reviews the concept of smart contracts and how they have developed as an evolution of the existing blockchain architecture.
+In this section, we build a foundation with regards to the theoretical concepts and background that are needed to follow the concepts presented in section \ref{sec:03_related_work}. First Section \ref{subsec:02_cybersecurity} presents the traditional ideas of cybersecurity as they have been part of research for the past decades. Subsequently, Section \ref{subsec:02_Blockchain} elaborates on the core concepts of the Blockchain which are necessary to understand the main research topic of this work. Finally, Section \ref{subsec:02_smart_contracts} reviews the concept of smart contracts and how they have developed as an evolution of the existing Blockchain architecture.
 
 \input{Talk7/02_background/02-1_cybersecurity.tex}
 \input{Talk7/02_background/02-2_blockchain.tex}
