--- a/Talk7/03_related_work/03_related_work.tex
+++ b/Talk7/03_related_work/03_related_work.tex
@@ -1,9 +1,9 @@
 \section{Blockchain Applications in Cybersecurity}
 \label{sec:03_related_work}
 
-Having built the theoretical foundation in Section \ref{sec:02_background}, we now focus on the main research question of this work and summarize recent research in the intersection of blockchain and cybersecurity. The subsequent sections can broadly be separated into a low-level, more technical part (Sections \ref{subsec:03_ddos} and \ref{subsec:03_pki}), and a high-level, more application-oriented part (Sections \ref{subsec:03_IoT} and \ref{subsec:03_applications}).
+Having built the theoretical foundation in Section \ref{sec:02_background}, we now focus on the main research question of this work and summarize recent research in the intersection of Blockchain and cybersecurity. The subsequent sections can broadly be separated into a low-level, more technical part (Sections \ref{subsec:03_ddos} and \ref{subsec:03_pki}), and a high-level, more application-oriented part (Sections \ref{subsec:03_IoT} and \ref{subsec:03_applications}).
 
-Section \ref{subsec:03_ddos} first presents some of the possible blockchain-based solutions that have been developed as a countermeasure to DDoS attacks, alongside a comparison to currently existing countermeasures and the potential motivations for attackers in a DDoS context. Subsequently, Section \ref{subsec:03_pki} goes into the potential application of blockchain to rebuild a key part of the internet security infrastructure, specifically the current idea of PKI's. On a higher level, Section \ref{subsec:03_IoT} then presents some of the critical issues in securing IoT devices, as well as how they could be approached with blockchain technologies. Finally, Section \ref{subsec:03_applications} summarizes the currently productive applications of the blockchain in a broad cybersecurity context, as well as some other application areas that are still part of current research.
+Section \ref{subsec:03_ddos} first presents some of the possible Blockchain-based solutions that have been developed as a countermeasure to DDoS attacks, alongside a comparison to currently existing countermeasures and the potential motivations for attackers in a DDoS context. Subsequently, Section \ref{subsec:03_pki} goes into the potential application of Blockchain to rebuild a key part of the internet security infrastructure, specifically the current idea of PKI's. On a higher level, Section \ref{subsec:03_IoT} then presents some of the critical issues in securing IoT devices, as well as how they could be approached with Blockchain technologies. Finally, Section \ref{subsec:03_applications} summarizes the currently productive applications of the Blockchain in a broad cybersecurity context, as well as some other application areas that are still part of current research.
 
 \input{Talk7/03_related_work/03-1_ddos}
 \input{Talk7/03_related_work/03-2_pki_ksi}
