--- a/Talk7/04_final_considerations/04_final_considerations.tex
+++ b/Talk7/04_final_considerations/04_final_considerations.tex
@@ -4,34 +4,34 @@ The goal of this section is first to summarize the key points of this paper, and
 
 \subsection{Summary}
 
-After giving some foundational concepts in the areas of cybersecurity, blockchain, and smart contracts, the potential use of blockchain technology for combating DDoS attacks, for decentralizing Public Key Infrastructure (PKI), for securing the Internet of Things (IoT), as well as for some specific applications is described. Blockchain technology is a good choice whenever there is a need for integrity and decentralization.
+After giving some foundational concepts in the areas of cybersecurity, Blockchain, and smart contracts, the potential use of Blockchain technology for combating DDoS attacks, for decentralizing Public Key Infrastructure (PKI), for securing the Internet of Things (IoT), as well as for some specific applications is described. Blockchain technology is a good choice whenever there is a need for integrity and decentralization.
 
-For dealing with DDoS attacks, blockchains and smart contracts can be used to serve as a decentralized database to store white- and blacklisted IP-addresses. Blockchains and smart contract also facilitate the sharing of information.
-Various mitigation techniques such as Software-Defined Networks (SDN) and Network Function Virtualization (NFV) can be combined and facilited with blockchain technology and smart contracts.
+For dealing with DDoS attacks, Blockchains and smart contracts can be used to serve as a decentralized database to store white- and blacklisted IP-addresses. Blockchains and smart contract also facilitate the sharing of information.
+Various mitigation techniques such as Software-Defined Networks (SDN) and Network Function Virtualization (NFV) can be combined and facilited with Blockchain technology and smart contracts.
 
-In public key infrastructure, a major danger is a certificate authority being hacked. Decentralizing the public key infrastructure averts this danger. Namecoin is a blockchain with the goal to store all DNS-related naming information in a blockchain. There are blockchain-based PKI solutions that build upon namecoin to decentralize the PKI architecture.
-With gazal, the traditional web certification model is moved to the Ethereum blockchain with a smart contract specifying all procedures regarding the registration, transfer, and expiration of domains, as well as the associated values and certificates.
+In public key infrastructure, a major danger is a certificate authority being hacked. Decentralizing the public key infrastructure averts this danger. Namecoin is a Blockchain with the goal to store all DNS-related naming information in a Blockchain. There are Blockchain-based PKI solutions that build upon namecoin to decentralize the PKI architecture.
+With gazal, the traditional web certification model is moved to the Ethereum Blockchain with a smart contract specifying all procedures regarding the registration, transfer, and expiration of domains, as well as the associated values and certificates.
 
-In IoT, blockchain technology is proposed to help with the integrity of IoT datasets. IoT devices like sensors typically generate lots of data. Blockchain preserves the integrity of IoT generated datasets. Further, IoT and blockchain combinationd have been shown to be a useful
+In IoT, Blockchain technology is proposed to help with the integrity of IoT datasets. IoT devices like sensors typically generate lots of data. Blockchain preserves the integrity of IoT generated datasets. Further, IoT and Blockchain combinationd have been shown to be a useful
 combination in managing IoT devices. This can be along a supply chain where IoT devices change ownership or have to record transactions or in a smart home
 where access roles between all smart devices are defined in smart contracts, securing the IoT network from malicious tampering.
 
-Furthermore, blockchain technology can be used in various concrete applications to enhance their security.
-In e-voting systems, blockchains can be used as a transparent and incorruptible database.
-In smart cities, an autonomous vehicles blockchain technology can enhance cybersecurity as well.
-In the healthcare sectors blockchain can be used to share patients data between hospitals with an auditable trail. In one of the proposed systems, the MedRec systems, patients can authorize what data to share and with whom.
-In smart cities and autonomous vehicles blockchain helps to solve the problem of centralization, unscalability,
+Furthermore, Blockchain technology can be used in various concrete applications to enhance their security.
+In e-voting systems, Blockchains can be used as a transparent and incorruptible database.
+In smart cities, an autonomous vehicles Blockchain technology can enhance cybersecurity as well.
+In the healthcare sectors Blockchain can be used to share patients data between hospitals with an auditable trail. In one of the proposed systems, the MedRec systems, patients can authorize what data to share and with whom.
+In smart cities and autonomous vehicles Blockchain helps to solve the problem of centralization, unscalability,
 and unsecured communication architectures by its very nature.
 
-The question remains whether blockchains are really needed and if they really solve a problem or simply shift the problem somewhere else. The next section discusses this point.
+The question remains whether Blockchains are really needed and if they really solve a problem or simply shift the problem somewhere else. The next section discusses this point.
 
 \subsection{Discussion}
 
-As shown in this paper, there are various ways in which blockchain technology can enhance cybersecurity.
-But blockchains have their own limitations. They use a lot of power and don't scale well. This is a problem especially for IoT applications where devices are designed to use little power and have little storage. Therefore the blockchains are sometimes adapted to fit their use case better and for example use trust instead of proof of work.
+As shown in this paper, there are various ways in which Blockchain technology can enhance cybersecurity.
+But Blockchains have their own limitations. They use a lot of power and don't scale well. This is a problem especially for IoT applications where devices are designed to use little power and have little storage. Therefore the Blockchains are sometimes adapted to fit their use case better and for example use trust instead of proof of work.
 
-Before trying to apply blockchain technology to solve a problem, we think it is important to first reflect upon the question wether a blockchain is really needed as shown in the flowchart in Figure~\ref{fig:Blockchain_or_not}.
-Fundamentally blockchains cannot solve problems of human nature. In e-voting, if the government itself is not trusted, how can one trust the blockchain set up by the government? Nevertheless, there is definitely a place for blockchain technology for helping with cybersecurity as this paper has shown by collecting examples thereof.
+Before trying to apply Blockchain technology to solve a problem, we think it is important to first reflect upon the question wether a Blockchain is really needed as shown in the flowchart in Figure~\ref{fig:Blockchain_or_not}.
+Fundamentally Blockchains cannot solve problems of human nature. In e-voting, if the government itself is not trusted, how can one trust the Blockchain set up by the government? Nevertheless, there is definitely a place for Blockchain technology for helping with cybersecurity as this paper has shown by collecting examples thereof.
 
 
 
