Capitalize Section where necessary

--- a/Talk7/02_background/02-1_cybersecurity.tex
+++ b/Talk7/02_background/02-1_cybersecurity.tex
@@ -15,7 +15,7 @@ Data, software, and hardware all over the world need to be protected in a way th
         \subitem Definition: Only authorized users can \textbf{view} assets (e.g., a thief gains access to user data).
   \item \textbf{Integrity:} The trustworthiness of resources or data and the prevention of unauthorized or unwanted changes is the base of this component. It usually includes data integrity (information content) and origin integrity (source of data). Mechanisms of integrity may be either prevented or detected. A prevention mechanism blocks any unauthorized try to modify data. Detection mechanisms on the other side do not prevent violations of integrity. They report that the underlying integrity was compromised. As the source and the trust of data usually relies on assumptions, evaluating the integrity of data is often difficult.
         \subitem Definition: An asset is \textbf{modified} only by authorized users (e.g., a thief gains access to data and modifies its content).
-  \item \textbf{Availability:} A resource or information must be accessible to a user at any time. An unavailable system is as useful as having no such system. By guaranteeing a running system, those resources may be utilized to generate revenue for a company or to gain information from data. Denial of service attacks (DoS), in general, are efforts to block the availability of a system and are difficult to detect because unusual access patterns have to be detected. In section \ref{subsec:03_ddos}, those types of attacks are further described.
+  \item \textbf{Availability:} A resource or information must be accessible to a user at any time. An unavailable system is as useful as having no such system. By guaranteeing a running system, those resources may be utilized to generate revenue for a company or to gain information from data. Denial of service attacks (DoS), in general, are efforts to block the availability of a system and are difficult to detect because unusual access patterns have to be detected. In Section \ref{subsec:03_ddos}, those types of attacks are further described.
         \subitem Definition: Any authorized party may \textbf{use} an asset (e.g., a thief steals a computer and the user has no longer access).
 \end{itemize}
 
