--- a/Talk7/01_introduction/01_introduction.tex
+++ b/Talk7/01_introduction/01_introduction.tex
@@ -8,7 +8,7 @@ To establish a solid foundation, Section~\ref{sec:02_background} provides a summ
 
 On a lower, more technical level, this work focuses on the applications of Blockchain for the prevention of Distributed Denial of Service attacks (DDoS attacks), as well as the improvement of key parts of the internet infrastructure. DDoS attacks are a possibility for attackers to flood the service of a company. Such attacks can lead to availability issues (e.g., causing service downtimes) and thus result in significant business forfeits. Approaches to protecting networks against such DDoS attacks using Blockchain technologies are summarized in Section~\ref{subsec:03_ddos}.
 
-A critical part of the internet and communications security in today's environment is the existence of communication methods that participants trust to deliver messages securely and confidently. Public Key Infrastructures (PKI) provide the backbone for many of these methods. Existing PKI architectures often rely on a centralized infrastructure, which enables many kinds of attacks. We provide an overview of possible improvements to PKI using Blockchain technologies in section \ref{subsec:03_pki}.
+A critical part of the internet and communications security in today's environment is the existence of communication methods that participants trust to deliver messages securely and confidently. Public Key Infrastructures (PKI) provide the backbone for many of these methods. Existing PKI architectures often rely on a centralized infrastructure, which enables many kinds of attacks. We provide an overview of possible improvements to PKI using Blockchain technologies in Section \ref{subsec:03_pki}.
 
 The emergence of the Internet of Things (IoT) and a growing market for interconnected devices brings exciting challenges for Blockchain use. Section \ref{subsec:03_IoT} reviews some of the most critical security and privacy challenges, as well as how they can be mitigated with Blockchain technology. It provides an overview of how Blockchain can help with proving the integrity of IoT data (e.g., smart meters) and goes into how Blockchain can strengthen the security of IoT in the current state of research (e.g., in smart homes).
 
