Make all e.g. and i.e. italic

--- a/Talk7/02_background/02-1_cybersecurity.tex
+++ b/Talk7/02_background/02-1_cybersecurity.tex
@@ -12,15 +12,15 @@ Various fields shaped the history of cybersecurity, such as cryptography which w
 Data, software, and hardware all over the world need to be protected in a way that guarantees confidentiality, integrity, and availability \cite{Pfleeger2014}. Those three security objectives are considered the most important components of security and are modeled into the rear triangle, also called the CIA-triangle. By combining these three aspects, a system will become valuable for a user. However, there are three possible ways to harm this value by breaching one of the above components, as seen in \cite{Bishop2004}.
 \begin{itemize}
   \item \textbf{Confidentiality:} As the use of computers in sensitive fields such as industry, military or government has grown, keeping information secret has become of utmost importance. Data such as student grades, medical records and many more are sensitive information that needs to be controlled carefully. Ensuring confidentiality is a problematic operation throughout all computer systems. There has to always be an authorized officer to distribute  authorization rights and allow individuals to access data within a company or institution.
-        \subitem Definition: Only authorized users can \textbf{view} assets (e.g., a thief gains access to user data).
+        \subitem Definition: Only authorized users can \textbf{view} assets (\textit{e.g.}, a thief gains access to user data).
   \item \textbf{Integrity:} The trustworthiness of resources or data and the prevention of unauthorized or unwanted changes is the base of this component. It usually includes data integrity (information content) and origin integrity (source of data). Mechanisms of integrity may be either prevented or detected. A prevention mechanism blocks any unauthorized try to modify data. Detection mechanisms on the other side do not prevent violations of integrity. They report that the underlying integrity was compromised. As the source and the trust of data usually relies on assumptions, evaluating the integrity of data is often difficult.
-        \subitem Definition: An asset is \textbf{modified} only by authorized users (e.g., a thief gains access to data and modifies its content).
+        \subitem Definition: An asset is \textbf{modified} only by authorized users (\textit{e.g.}, a thief gains access to data and modifies its content).
   \item \textbf{Availability:} A resource or information must be accessible to a user at any time. An unavailable system is as useful as having no such system. By guaranteeing a running system, those resources may be utilized to generate revenue for a company or to gain information from data. Denial of service attacks (DoS), in general, are efforts to block the availability of a system and are difficult to detect because unusual access patterns have to be detected. In Section \ref{subsec:03_ddos}, those types of attacks are further described.
-        \subitem Definition: Any authorized party may \textbf{use} an asset (e.g., a thief steals a computer and the user has no longer access).
+        \subitem Definition: Any authorized party may \textbf{use} an asset (\textit{e.g.}, a thief steals a computer and the user has no longer access).
 \end{itemize}
 
 \subsubsection{Attack vectors}
-The main goal of computer security is to protect valuable assets, such as hardware, software, and data. A threat is a potential violation of having security within a system. There are many possibilities to attack a computer system which can be categorized as either direct attacks (sometimes technically difficult to mount) or indirect attacks (e.g., social engineering attacks) \cite{Bishop2003}. Typical examples include the following: Hoaxes, Bugs, Trojan horses,  worm, virus, rootkit or bots.
+The main goal of computer security is to protect valuable assets, such as hardware, software, and data. A threat is a potential violation of having security within a system. There are many possibilities to attack a computer system which can be categorized as either direct attacks (sometimes technically difficult to mount) or indirect attacks (\textit{e.g.}, social engineering attacks) \cite{Bishop2003}. Typical examples include the following: Hoaxes, Bugs, Trojan horses,  worm, virus, rootkit or bots.
 
 \subsubsection{Terminology}
 In the literature, the terms cybersecurity and information security are used interchangeably \cite{VonSolms2013}. Security in general is hard to define as no universally agreed definition exists. A possible definition of security may be the state in which there is no relevant threat or security breach. As it is not possible to enumerate all possible threats or to verify their nonexistence, security cannot be measured in a meaningful way. Security, in general, is very individual depending on the person and her willingness to take risks, which can be perceived differently by other people. All in all, security refers to protection against \textbf{intended} incidents and attacks \cite{Bishop2004, Pfleeger2014}. Additionally, security has to be disassociated from the term safety, as the latter refers to \textbf{unintended} incidents and attacks \cite{Bishop2004}.
