--- a/Talk7/02_background/02-3_smart_contracts.tex
+++ b/Talk7/02_background/02-3_smart_contracts.tex
@@ -8,7 +8,7 @@ The Ethereum project started in 2015 and has gained popularity since then. It is
 Nodes in the Ethereum network make up the Ethereum Virtual Machine (EVM). Smart contracts are written in the programming language solidity. They get compiled to bytecode that the EVM can understand.
 Once deployed on the Blockchain, the code cannot be changed. Deploying smart contracts means mining them into the Blockchain, thus deploying smart contracts costs a fee like every other transaction. Once they are there, they are part of the Blockchain history. Every smart contract on the Blockchain lives at an address where the contracts exposed functions and variables can interact with. Smart contracts can inherit from smart contracts and can interact with other smart contracts.
 
-Users are able to transfer cryptocurrencies (e.g. Ether) to smart contracts.However, sending Ether to a smart contract that does not provide functionality to retrieve those ethers means they are lost forever in the contract. This is crucial especially when designing contracts that implement business logic or any contracts for that matter. Smart contracts should be reviewed and audited carefully and tested for vulnerabilities else its weaknesses can be exploited like in the infamous ``DAO`` attack~\cite{DoaAttack}.
+Users are able to transfer cryptocurrencies (\textit{e.g.} Ether) to smart contracts.However, sending Ether to a smart contract that does not provide functionality to retrieve those ethers means they are lost forever in the contract. This is crucial especially when designing contracts that implement business logic or any contracts for that matter. Smart contracts should be reviewed and audited carefully and tested for vulnerabilities else its weaknesses can be exploited like in the infamous ``DAO`` attack~\cite{DoaAttack}.
 
 Every transaction on the Ethereum Blockchain costs a fee called gas. Gas is expressed in ether. The miner that mines a transaction collects the gas associated with it, thus gas serves as an incentive for miners to mine and contribute to the network. There is a defined set of operations with their respective gas costs in the Ethereum yellow paper \cite{ethereumyellowpaer}.
 Figure \ref{fig:smart_contract_fees} depicts an excerpt of those costs.
