--- a/Talk7/02_background/02-2_blockchain.tex
+++ b/Talk7/02_background/02-2_blockchain.tex
@@ -26,7 +26,7 @@ Due to the Blockchains various properties, multiple use-cases emerged. Even thou
   \item \textbf{Supply Chain Management}: In Supply Chain Management, the flow of goods includes "various intermediate storage and production cycles" \cite{Wust2017} and the Blockchain presents a suitable way to store and verify all processes in a tamperproof manner.
   \item \textbf{Payment and Money Transactions}: Transactions between different banks and result in temporary debts between them. This issue can be solved using \textit{Distributed Ledger Technologies}, that make use of a Blockchain to settle debts.
   \item \textbf{Decentralized Autonomous Organizations (DAO)}: "A DAO is an organization that is run autonomously through a set of smart contracts" \cite{Wust2017}. A DAO is therefore fundamentally dependent on the Blockchain, as it relies on decentralized governance of funds enforced by smart contracts.
-  \item \textbf{Proof of Ownership}: The idea of proofing intellectual or physical property is one of the most straightforward use cases for the Blockchain. In this scenario, the user registers his or her property (e.g., image, text or another object like land) through the use of an identity function in the Blockchain. "While this does not fully prove ownership, it does provide evidence of ownership if no one else can show that the object was previously published" \cite{Wust2017}.
+  \item \textbf{Proof of Ownership}: The idea of proofing intellectual or physical property is one of the most straightforward use cases for the Blockchain. In this scenario, the user registers his or her property (\textit{e.g.}, image, text or another object like land) through the use of an identity function in the Blockchain. "While this does not fully prove ownership, it does provide evidence of ownership if no one else can show that the object was previously published" \cite{Wust2017}.
 \end{itemize}
 
 \subsubsection{The Blockchain and Cybersecurity}
