--- a/Talk7/03_related_work/03-2_pki_ksi.tex
+++ b/Talk7/03_related_work/03-2_pki_ksi.tex
@@ -3,20 +3,20 @@
 
 Public Key Cryptography serves as one of the cornerstones of modern communication systems and technologies, also including the Blockchain. Entities can secure their communication asynchronously using a pair of keys (public and private). After the distribution of its public key, an entity can be contacted by anyone via securely encrypted channels.
 
-What makes this type of cryptography so convenient is that its security does not depend on any shared hidden secret (e.g., a passphrase). An entity encrypts its message using the public key of its counterparty, after which only the supposed recipient can decrypt the message with its private key. While the public key and private key always belong to the same communication channel, it is practically not possible to infer the private key from the public key. This means that the public key can be distributed without considerations about the trustworthiness of potential recipients (e.g., publicly on online platforms) \cite{straub_tobias_usability_2006}.
+What makes this type of cryptography so convenient is that its security does not depend on any shared hidden secret (\textit{e.g.}, a passphrase). An entity encrypts its message using the public key of its counterparty, after which only the supposed recipient can decrypt the message with its private key. While the public key and private key always belong to the same communication channel, it is practically not possible to infer the private key from the public key. This means that the public key can be distributed without considerations about the trustworthiness of potential recipients (\textit{e.g.}, publicly on online platforms) \cite{straub_tobias_usability_2006}.
 
-For a private exchange between two to a few counterparties, the simple approach of distributing public keys out-of-band (e.g., in person) might suffice to establish sufficient confidence and trust. As soon as we consider communication networks on a larger scale, an in-person exchange between all parties in the network would no longer be feasible. In such a case, one or more trusted, often centralized entities need to support the process of establishing trust \cite{straub_tobias_usability_2006}.
+For a private exchange between two to a few counterparties, the simple approach of distributing public keys out-of-band (\textit{e.g.}, in person) might suffice to establish sufficient confidence and trust. As soon as we consider communication networks on a larger scale, an in-person exchange between all parties in the network would no longer be feasible. In such a case, one or more trusted, often centralized entities need to support the process of establishing trust \cite{straub_tobias_usability_2006}.
 
 Public Key Infrastructure (PKI) is the summary term for an infrastructure that enables secure communication through such trusted entities. As described in \cite{straub_tobias_usability_2006}, a PKI "lets participants communicate with each other securely using public key cryptography and allows them to verify each other's keys with the help of certificates and trust relations."
 
 
 \subsubsection{Existing PKI Systems}
 
-Traditional PKI systems are most visibly used for communication over the web. Before two entities (e.g., a server and a client) can securely communicate over HTTPS/TLS, the domain name of the server must have been validated and certified by a certificate authority (CA). A CA is an entity that has the authority over issuing certificates for a given PKI namespace (e.g., domain names or a subset thereof).
+Traditional PKI systems are most visibly used for communication over the web. Before two entities (\textit{e.g.}, a server and a client) can securely communicate over HTTPS/TLS, the domain name of the server must have been validated and certified by a certificate authority (CA). A CA is an entity that has the authority over issuing certificates for a given PKI namespace (\textit{e.g.}, domain names or a subset thereof).
 
-A PKI certificate verifies that the given name-value (e.g., domain name and public key) binding is authentic and is itself signed with the key of a CA. The trustworthiness of a CA is signed by a higher-level CA, building a chain up to a root-level CA that ultimately needs to be trusted without verification. When establishing communication with a server over HTTPS, a client verifies the identity of the server according to its certificate, and client and server confidentially decide on a data encryption secret by employing asymmetric encryption. All further message and data exchanges are secured with symmetric encryption \cite{straub_tobias_usability_2006}. The procedures of PKI management as employed in HTTPS/TLS, as well as many other systems and private infrastructures, are standardized by the IETF in the X.509 standard \cite{adams_internet_2015}.
+A PKI certificate verifies that the given name-value (\textit{e.g.}, domain name and public key) binding is authentic and is itself signed with the key of a CA. The trustworthiness of a CA is signed by a higher-level CA, building a chain up to a root-level CA that ultimately needs to be trusted without verification. When establishing communication with a server over HTTPS, a client verifies the identity of the server according to its certificate, and client and server confidentially decide on a data encryption secret by employing asymmetric encryption. All further message and data exchanges are secured with symmetric encryption \cite{straub_tobias_usability_2006}. The procedures of PKI management as employed in HTTPS/TLS, as well as many other systems and private infrastructures, are standardized by the IETF in the X.509 standard \cite{adams_internet_2015}.
 
-Contrary to the centralized approach, the Pretty Good Privacy (PGP) architecture is based on a decentralized web-of-trust where all participants manually define their trust anchors (i.e., which entities to trust as the anchor for a certificate chain) instead of relying on a predefined trust store as included in operating systems or browsers \cite{straub_tobias_usability_2006}. While PGP is in relatively broad use for secured email communication, this work focuses mainly on centralized infrastructures for their approachability with Blockchain architectures.
+Contrary to the centralized approach, the Pretty Good Privacy (PGP) architecture is based on a decentralized web-of-trust where all participants manually define their trust anchors (\textit{i.e.}, which entities to trust as the anchor for a certificate chain) instead of relying on a predefined trust store as included in operating systems or browsers \cite{straub_tobias_usability_2006}. While PGP is in relatively broad use for secured email communication, this work focuses mainly on centralized infrastructures for their approachability with Blockchain architectures.
 
 
 \subsubsection{Threat Model for Public Key Infrastructures}
@@ -26,9 +26,9 @@ PKI systems allow for an establishment of trust and a secure exchange between pa
 
 Any such kind of attack could, if successful, allow an intruder to generate fraudulent certificates, which could then be used to impersonate one or more of the parties and perform a proxied man-in-the-middle attack. In such an attack, the attacker acts as a proxy that intercepts messages between the parties, decrypts and extracts their contents, and redirects them to the original recipient, making it very difficult for the participants to figure out they are being intercepted \cite{zusman_criminal_2008}.
 
-In the concrete example of a web certification authority, domains are most often validated by merely sending an email to an address on the domain to be certified (e.g., webmaster@xyz) or by verification of DNS records. This indirect verification creates vulnerabilities on several levels, as emails and DNS settings are managed by separate entities that could be attacked. CAs have also been known to issue fraudulent certificates on government request (e.g., for censorship), or through simple human error \cite{zusman_criminal_2008, zohar_blockchain-based_2019}.
+In the concrete example of a web certification authority, domains are most often validated by merely sending an email to an address on the domain to be certified (\textit{e.g.}, webmaster@xyz) or by verification of DNS records. This indirect verification creates vulnerabilities on several levels, as emails and DNS settings are managed by separate entities that could be attacked. CAs have also been known to issue fraudulent certificates on government request (\textit{e.g.}, for censorship), or through simple human error \cite{zusman_criminal_2008, zohar_blockchain-based_2019}.
 
-As centralization in PKI systems leads to a big attack surface, developing approaches that can function without the need for any such central entities (e.g., CAs) have been a topic of several publications in recent years. The following sections provide a more detailed overview of decentralized PKI in general as well as more specific applications in the area of web certification. While there are many other types of attacks on PKI (e.g., obtaining a private key through social engineering or directly attacking the encryption protocols), we focus on the critical aspect of centralization in this work.
+As centralization in PKI systems leads to a big attack surface, developing approaches that can function without the need for any such central entities (\textit{e.g.}, CAs) have been a topic of several publications in recent years. The following sections provide a more detailed overview of decentralized PKI in general as well as more specific applications in the area of web certification. While there are many other types of attacks on PKI (\textit{e.g.}, obtaining a private key through social engineering or directly attacking the encryption protocols), we focus on the critical aspect of centralization in this work.
 
 
 \subsubsection{Decentralized Public Key Infrastructures}
@@ -39,9 +39,9 @@ A foundational work that introduced the idea of applying Blockchain to the decen
 
 The main idea of Namecoin is to store all DNS-related naming information in a Blockchain ledger that enforces state updates to occur via appended transactions. All entities in the network share a copy of this ledger and can independently lookup the records associated with a name. Records are owned, and can only be modified, by a given cryptographic identity \cite{noauthor_namecoin_nodate, ali_blockstack:_2016}.
 
-While this approach to naming provides the benefit of decentralization, it comes with challenges regarding security, performance, and scalability. The Namecoin Blockchain is a fork of the Bitcoin Blockchain and shares most of its technicalities and limitations but progresses a separate ledger. This means that it has a separate and much smaller set of miners, making it very vulnerable to 51\% attacks (where an attacker controls a majority part of the computing power and can rewrite the chain) or DDoS. Even though Namecoin implements merged-mining (i.e., it allows bitcoin miners to participate in Namecoin mining), its computation is mainly concentrated on one big pool of miners with >50\% of the computational power \cite{noauthor_namecoin_nodate, ali_blockstack:_2016}.
+While this approach to naming provides the benefit of decentralization, it comes with challenges regarding security, performance, and scalability. The Namecoin Blockchain is a fork of the Bitcoin Blockchain and shares most of its technicalities and limitations but progresses a separate ledger. This means that it has a separate and much smaller set of miners, making it very vulnerable to 51\% attacks (where an attacker controls a majority part of the computing power and can rewrite the chain) or DDoS. Even though Namecoin implements merged-mining (\textit{i.e.}, it allows bitcoin miners to participate in Namecoin mining), its computation is mainly concentrated on one big pool of miners with >50\% of the computational power \cite{noauthor_namecoin_nodate, ali_blockstack:_2016}.
 
-In addition to the limitations on a security level, Namecoin also struggles with regards to performance (e.g., transactions per second). As the block size in bitcoin and its forks (i.e., Namecoin) is relatively small, there is a limited amount of data that can be stored in transactions and processed in a block, which severely limits the throughput of transactions and can lead to issues in a DNS use case.
+In addition to the limitations on a security level, Namecoin also struggles with regards to performance (\textit{e.g.}, transactions per second). As the block size in bitcoin and its forks (\textit{i.e.}, Namecoin) is relatively small, there is a limited amount of data that can be stored in transactions and processed in a block, which severely limits the throughput of transactions and can lead to issues in a DNS use case.
 
 \paragraph{Blockstack}
 
@@ -59,7 +59,7 @@ The Blockstack system architecture also offers possible solutions for several fu
 
 \paragraph{Bitforest}
 
-Approaches like Blockstack are possible solutions for the deployment of a fully decentralized PKI system that cannot be controlled or censored by any one entity. However, while this might be advantageous for some cases, organizations that deploy a PKI, even if it is decentralized, more often want to keep some control over their namespace. Without any such means of control, PKI systems are vulnerable to many kinds of abuse. An exemplary kind of abuse is called name squatting and refers to the preemptive reservation of names under the expectation of future profit (e.g., through auctioning off the name) \cite{dong_bitforest:_2018}.
+Approaches like Blockstack are possible solutions for the deployment of a fully decentralized PKI system that cannot be controlled or censored by any one entity. However, while this might be advantageous for some cases, organizations that deploy a PKI, even if it is decentralized, more often want to keep some control over their namespace. Without any such means of control, PKI systems are vulnerable to many kinds of abuse. An exemplary kind of abuse is called name squatting and refers to the preemptive reservation of names under the expectation of future profit (\textit{e.g.}, through auctioning off the name) \cite{dong_bitforest:_2018}.
 
 Similarly to the Blockstack architecture, the approach taken by Bitforest is based on a data structure on top of a Blockchain. However, Bitforest allows an organization to keep control over who participates in their namespaces. A namespace administrator can define mappings of names to indices in a binary search tree, where for each index, a list of all current and preceding values is stored \cite{dong_bitforest:_2018}.
 
@@ -74,19 +74,19 @@ One of the most important application areas of PKI systems is the certification 
 
 \paragraph{Ghazal}
 
-In the traditional web certification model, domains and their owners are validated by trusted certification authorities. The most popular means of validation is domain-validation, meaning that only the association between the public key and domain name is certified. This approach suffers from the many critical issues due to indirections as described in \ref{subsubsec:threat_model_pki}.
+In the traditional web certification model, domains and their owners are validated by trusted certification authorities. The most popular means of validation is domain-validation, meaning that only the association between the public key and domain name is certified. This approach suffers from the many critical issues due to indirections as described in Section \ref{subsubsec:threat_model_pki}.
 
 Ghazal proposes a new uni-authoritative paradigm for web certification and domain infrastructure. Concretely, no single authority should be needed to certify entities or register domains, as the Blockchain itself could serve as a sort of authoritative entity. This approach has the potential to solve many of the vulnerabilities occurring due to indirections and centralization in general \cite{zohar_ghazal:_2019}.
 
-The foundation of the Ghazal prototype is built on a smart contract on the Ethereum Blockchain. The contract specifies all procedures regarding the registration, transfer, and expiration of domains, as well as the associated values and certificates. Upon registration of a domain name in the .ghazal namespace, the owner can assign arbitrary values to the name (including public keys/certificates). Registrations and other operations incur a fee that is paid to a block-hole account on the Ethereum network, meaning that nobody can spend the fee again \cite{zohar_ghazal:_2019}.
+The foundation of the Ghazal prototype is built on a smart contract on the Ethereum Blockchain. The contract specifies all procedures regarding the registration, transfer, and expiration of domains, as well as the associated values and certificates. Upon registration of a domain name in the \textit{.ghazal} namespace, the owner can assign arbitrary values to the name (including public keys/certificates). Registrations and other operations incur a fee that is paid to a block-hole account on the Ethereum network, meaning that nobody can spend the fee again \cite{zohar_ghazal:_2019}.
 
-While a uni-authoritative paradigm could solve some of the issues in today's web certification, browsers and operating systems would need to be extended to support such functionality. For example, to support the current Ghazal proposal, .ghazal domains would need to be recognized, processed, and verified differently from the remainder of sites on the web \cite{zohar_ghazal:_2019}.
+While a uni-authoritative paradigm could solve some of the issues in today's web certification, browsers and operating systems would need to be extended to support such functionality. For example, to support the current Ghazal proposal, \textit{.ghazal} domains would need to be recognized, processed, and verified differently from the remainder of sites on the web \cite{zohar_ghazal:_2019}.
 
 It is also still a topic of research if and how a decentralized system could support domain lookups efficiently without the need for storing the entire Blockchain on each client device. Furthermore, the approach taken by Ghazal is plagued by new issues that arise through the removal of all central entities. For example, if a domain owner's private key were to be lost, the corresponding name could never be reassigned \cite{zohar_ghazal:_2019}.
 
 \paragraph{Certificate Recovation and Transparency}
 
-Certificate Transparency (CT) is a recent improvement to the traditional web certification model. When CT is enforced by a browser (e.g., modern versions of Chrome), the browser only accepts certificates without warning if they have been published to a public append-only log of certificate issuances. This measure has been introduced to counteract the malicious issuance of certificates by hacked CAs or through compulsion or malfeasance \cite{zohar_blockchain-based_2019}.
+Certificate Transparency (CT) is a recent improvement to the traditional web certification model. When CT is enforced by a browser (\textit{e.g.}, modern versions of Chrome), the browser only accepts certificates without warning if they have been published to a public append-only log of certificate issuances. This measure has been introduced to counteract the malicious issuance of certificates by hacked CAs or through compulsion or malfeasance \cite{zohar_blockchain-based_2019}.
 
 While CT in traditional web certification can already improve web security significantly, it is only a reactive measure, meaning that fraud can still occur but are probably recognized more quickly. \cite{zohar_blockchain-based_2019} proposes that certificate issuance as well as handling the revocation of certificates could be moved to a Blockchain-based system, preventing the issuing of malicious certificates entirely without the approval of the domain owner.
 
@@ -95,10 +95,10 @@ In the solution proposed in \cite{zohar_blockchain-based_2019}, certificate auth
 
 \subsubsection{Keyless Signature Infrastructures and Blockchain}
 
-A Keyless Signature Infrastructure (KSI) is the basis for an alternative approach to verification of the integrity of documents that does not depend on the secrecy of private keys. A document that is submitted to a KSI is first hashed and then added to a Merkle hash-tree containing all documents processed in the same round (i.e., with other documents that arrived around the same time). The signature token received upon document submission can then be used to check whether a document was contained in the tree at the given time. By following the path encoded in the signature token, it must be possible to reconstruct the root-hash of the entire tree \cite{hutchison_keyless_2013, jamthagen_blockchain-based_2016}.
+A Keyless Signature Infrastructure (KSI) is the basis for an alternative approach to verification of the integrity of documents that does not depend on the secrecy of private keys. A document that is submitted to a KSI is first hashed and then added to a Merkle hash-tree containing all documents processed in the same round (\textit{i.e.}, with other documents that arrived around the same time). The signature token received upon document submission can then be used to check whether a document was contained in the tree at the given time. By following the path encoded in the signature token, it must be possible to reconstruct the root-hash of the entire tree \cite{hutchison_keyless_2013, jamthagen_blockchain-based_2016}.
 
-The KSI architecture processes incoming signature requests in rounds (e.g., one round per second) and, after completion of a round, appends the root-hash of the generated hash tree to a global tree ("hash calendar"). The root of this global tree is then periodically published as a trust anchor that can be used to verify the presence of a document at a point before its publication \cite{hutchison_keyless_2013}. Contrary to the approach of signing documents with one's private key, this approach depends on the infrastructure (i.e., signing servers) to sign the document into the tree. This is what makes possible keyless signing but also incurs a dependency on the availability of the KSI to sign a document \cite{jamthagen_blockchain-based_2016}.
+The KSI architecture processes incoming signature requests in rounds (\textit{e.g.}, one round per second) and, after completion of a round, appends the root-hash of the generated hash tree to a global tree ("hash calendar"). The root of this global tree is then periodically published as a trust anchor that can be used to verify the presence of a document at a point before its publication \cite{hutchison_keyless_2013}. Contrary to the approach of signing documents with one's private key, this approach depends on the infrastructure (\textit{i.e.}, signing servers) to sign the document into the tree. This is what makes possible keyless signing but also incurs a dependency on the availability of the KSI to sign a document \cite{jamthagen_blockchain-based_2016}.
 
 \cite{hutchison_keyless_2013} suggests that the root-hash could be published to broad-reach media like newspapers in monthly iterations. This would allow verification of a document's integrity even without the KSI infrastructure, as one can compute the root-hash and compare it to the one published. However, this approach is inefficient in that it needs manual verification against an external medium and can only be performed with a reasonable publishing frequency \cite{jamthagen_blockchain-based_2016}.
 
-The Blockchain-based approach presented in \cite{jamthagen_blockchain-based_2016} improves the efficiency by publishing to the Blockchain in an increased frequency such that one can more granularly verify when a document was signed (i.e., added to the tree). Additionally, the break between media is no longer necessary, as signatures can be automatically verified based on the Blockchain contents. When publishing to the Blockchain, the frequency can be increased to several times per hour, as it is only limited by the throughput of blocks being mined \cite{jamthagen_blockchain-based_2016}.
+The Blockchain-based approach presented in \cite{jamthagen_blockchain-based_2016} improves the efficiency by publishing to the Blockchain in an increased frequency such that one can more granularly verify when a document was signed (\textit{i.e.}, added to the tree). Additionally, the break between media is no longer necessary, as signatures can be automatically verified based on the Blockchain contents. When publishing to the Blockchain, the frequency can be increased to several times per hour, as it is only limited by the throughput of blocks being mined \cite{jamthagen_blockchain-based_2016}.
