--- a/Talk7/02_background/02-3_smart_contracts.tex
+++ b/Talk7/02_background/02-3_smart_contracts.tex
@@ -31,7 +31,7 @@ Miners can only include so many transactions in a block that block gas limit is 
 The following overview sums up the key terms as mentioned above \cite{blockgeeks}:
 \begin{itemize}
   \item {\textbf{gas}: How much gas a transaction needs }
-  \item {\textbf{gas prize}: How much ether a unit of gas costs, determined by the market}
+  \item {\textbf{gas prize}: How much Ether a unit of gas costs, determined by the market}
   \item {\textbf{gas limit}: Maximum amount of gas to use up for a transaction}
   \item {\textbf{transaction fee}: Gas used times gas price}
   \item {\textbf{block gas limit}: Maximum sum of gas of all transactions in a block}
